exports[`iconConfig returns config for spring with false val 1`] = `
Object {
  "damping": 40,
  "precision": 0.01,
  "stiffness": 300,
  "val": 1
}
`;

exports[`iconConfig returns config for spring with true val 1`] = `
Object {
  "damping": 40,
  "precision": 0.01,
  "stiffness": 300,
  "val": 1.25
}
`;

exports[`iconConfig returns object and matches snapshot 1`] = `
Object {
  "damping": 40,
  "iconStyle": [Function iconStyle],
  "mySpring": [Function mySpring],
  "stiffness": 300,
  "x": 1
}
`;
